[package]
name = "aei2-ethics-of-technology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
serde = "1.0.135"
serde_json = "1.0.78"
tokio = {version = "1.15.0", features = ["macros", "rt-multi-thread"]}
regex = "1.5.4"
